# datasight

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  codecov.yml  dashboard-filter-roadmap.md  eslint.config.js  index.html  mkdocs.yml  pyproject.toml  search.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gh-pages.yml  release.yml
concepts/choosing-an-llm/: index.html
concepts/how-the-agent-works/: index.html
concepts/sql-result-cache/: index.html
concepts/users-and-roles/: index.html
design/architecture/: index.html
design/contributing/: index.html
design/how-the-agent-works/: index.html
design/sql-result-cache/: index.html
docs/: conf.py  glossary.md  index.md
docs/_static/: custom.css
docs/concepts/: choosing-an-llm.md  how-the-agent-works.md  sql-result-cache.md  users-and-roles.md
docs/dataset-developer/: configuration.md  database-connections.md  example-queries.md  query-log.md  querying-files.md  quickstart.md  verification.md
docs/design/: architecture.md  how-the-agent-works.md  sql-result-cache.md
docs/end-user/: ask-questions.md  cli-usage.md  data-quality.md  demo-dataset.md  getting-started.md  inspect-files.md  inspection-workflows.md  measures.md  project-setup.md  query-confidence.md  query-log.md  quickstart.md  remote-hpc.md  visualizations.md  web-ui.md
docs/end-user/explanation/: query-confidence.md  semantic-measures.md  trusting-ai-results.md
docs/end-user/how-to/: ask-from-cli.md  ask-in-web-ui.md  audit-data-quality.md  build-a-dashboard.md  configure-measures.md  connect-spark.md  create-visualizations.md  declare-time-series.md  explore-files.md  install.md  run-on-hpc.md  save-and-rerun.md  save-dashboard-template.md
docs/end-user/reference/: keyboard-shortcuts.md  query-confidence-toggles.md  web-ui.md
docs/end-user/tutorials/: getting-started.md  tempo.md  time-validation.md
docs/explanation/: architecture.md
docs/how-to/: example-queries.md  remote-hpc.md  schema-description.md  verification.md  visualizations.md  web-ui.md
docs/project-developer/: database-connections.md  example-queries.md  querying-files.md  schema-config.md  schema-description.md  set-up-project.md  verification.md
docs/project-setup/how-to/: configure-measures.md  database-connections.md  declare-joins.md  querying-files.md  schema-config.md  schema-description.md  validation-rules.md  verification.md
docs/project-setup/tutorials/: set-up-project.md  (+1 more)
docs/reference/: cli.md  configuration.md  keyboard-shortcuts.md  query-confidence-toggles.md  web-ui.md
docs/stylesheets/: extra.css
docs/tool-developer/: architecture.md  contributing.md
docs/tutorials/: demo-dataset.md  quickstart.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: screenshots.spec.ts  smoke.spec.ts  tidy.spec.ts
frontend/src/: App.svelte  app.css
frontend/tests/: chat.test.ts  emacs-keys.test.ts  format.test.ts  replay.test.ts  search.test.ts  shortcuts.test.ts  sql-completion.test.ts  stores.test.ts  summarize.test.ts  tidy.test.ts
glossary/: index.html
project-developer/database-connections/: index.html
project-developer/example-queries/: index.html
project-developer/querying-files/: index.html
project-developer/schema-config/: index.html
project-developer/schema-description/: index.html
project-developer/set-up-project/: index.html
project-developer/verification/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/keyboard-shortcuts/: index.html
reference/query-confidence-toggles/: index.html
reference/web-ui/: index.html
scripts/: build-frontend.sh  generate_cli_reference.py
src/datasight/: __init__.py  __main__.py  agent.py  audit_report.py  chart.py  cleanup.py  cli.py  cli_helpers.py  config.py  cost.py  dashboard_template.py  data_profile.py  demo.py  demo_dsgrid_tempo.py  demo_time_validation.py  distribution.py  events.py  exceptions.py  explore.py  export.py  generate.py  grounding.py  grounding_repair.py  identifiers.py  integrity.py  llm.py  prompts.py  query_log.py  recent_projects.py  runner.py  schema.py  schema_links.py  schema_types.py  session_archive.py  settings.py  sql_validation.py  templating.py  tidy.py  tidy_llm.py  tidy_review.py  (+2 more)
stylesheets/: extra.css
tests/: _env_helpers.py  conftest.py  test_agent.py  test_agent_extra.py  test_audit.py  test_audit_report_extra.py  test_caching_runner.py  test_cli_ask.py  test_cli_commands.py  test_cli_config.py  test_cli_tools.py  test_cli_tools_extra.py  test_config.py  test_config_extra.py  test_dashboard_template.py  test_data_profile_extra.py  test_distribution.py  test_docs_cli_reference.py  test_explore.py  test_explore_extra.py  test_explore_spark.py  test_export.py  test_export_extra.py  test_generate.py  test_generate_extra.py  test_generate_persist_db.py  test_grounding.py  test_grounding_repair.py  test_identifiers.py  test_integrity.py  test_llm.py  test_prompts.py  test_query_log.py  test_recent_projects.py  test_reports.py  test_runner.py  test_runner_extra.py  test_schema.py  test_schema_config_load.py  test_schema_extra.py  (+19 more)
tool-developer/architecture/: index.html
tool-developer/contributing/: index.html
(+238 files in other folders)
