[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasight"
version = "0.2.0"
description = "AI-powered database exploration with natural language"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "dthom" },
]
dependencies = [
    "click>=8.0,<9",
    "rich_click>=1.8,<2",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "anthropic>=0.40,<1",
    "pandas>=2.0,<4",
    "plotly>=5.0,<6",
    "pyarrow>=14.0,<19",
    "rich>=13.0,<15",
    "adbc-driver-flightsql>=1.0,<2",
    "duckdb>=1.0,<2",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "loguru>=0.7,<1",
    "truststore>=0.10.4",
    "sqlglot>=26,<27",
]

[project.optional-dependencies]
openai-compat = [
    "openai>=2,<3",
]
ollama = [
    "datasight[openai-compat]",
]
github = [
    "datasight[openai-compat]",
]
postgres = [
    "psycopg[binary]>=3.1,<4",
]
export = [
    "kaleido>=0.2,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "mkdocs-material>=9.5,<10",
    "mkdocs-click>=0.8,<1",
    "ty>=0.0.26",
    "pre-commit>=4.0,<5",
]

[project.scripts]
datasight = "datasight.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a running Ollama instance",
]

[tool.ruff]
line-length = 99

[tool.hatch.build.targets.wheel]
packages = ["src/datasight"]
