[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasight"
version = "0.6.2"
description = "AI-powered data exploration with natural language"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
    { name = "Daniel Thom", email = "daniel.thom@nlr.gov" },
]
dependencies = [
    "click>=8.0,<9",
    "rich_click>=1.8,<2",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "anthropic>=0.40,<1",
    "pandas>=2.0,<4",
    "plotly>=5.0,<7",
    "pyarrow>=14.0,<25",
    "rich>=13.0,<16",
    "adbc-driver-flightsql>=1.0,<2",
    "duckdb>=1.0,<2",
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "uvicorn>=0.29,<1",
    "loguru>=0.7,<1",
    "truststore>=0.10.4",
    "sqlglot>=26,<31",
    "chevron>=0.14,<1",
    "openai>=2,<3",
    "openpyxl>=3.1,<4",
    "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
export = [
    "kaleido>=0.2,<2",
]
spark = [
    "pyspark[connect]>=4.0,<5",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov",
    "pytest-asyncio>=0.23,<2",
    "zensical>=0.0.31",
    "ruff>=0.15,<1",
    "ty>=0.0.26",
    "prek>=0.2,<1",
]

[project.urls]
Repository = "https://github.com/dsgrid/datasight"
Documentation = "https://dsgrid.github.io/datasight/"
Issues = "https://github.com/dsgrid/datasight/issues"

[project.scripts]
datasight = "datasight.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a running Ollama instance",
]

[tool.coverage.run]
source = ["src/datasight"]
branch = false
omit = [
    "tests/*",
    "*/tests/*",
    "src/datasight/web/static/*",
    "src/datasight/__main__.py",
    "src/datasight/demo.py",
    "src/datasight/demo_dsgrid_tempo.py",
    "src/datasight/demo_time_validation.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 99

[tool.hatch.build.targets.wheel]
packages = ["src/datasight"]
artifacts = [
    "src/datasight/web/static/assets/*",
    "src/datasight/web/static/datasight-icon.svg",
    "src/datasight/web/templates/index.html",
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "src/datasight/web/static/assets/*",
    "src/datasight/web/static/datasight-icon.svg",
    "src/datasight/web/templates/index.html",
]
